feat(clases): ruta PATCH /clases/{id} implementada #16
